[gd_scene load_steps=9 format=3 uid="uid://cw6khyjk624mf"]

[ext_resource type="Texture2D" uid="uid://dqcmr855qpuf5" path="res://Assets/Combat/Backgrounds/battleForest.png" id="1_74idv"]
[ext_resource type="Script" path="res://Scripts/Combat/Combat.gd" id="1_bn50e"]
[ext_resource type="Texture2D" uid="uid://g3jb7fhd8mwc" path="res://Assets/Combat/HealthUnder.png" id="3_12ert"]
[ext_resource type="Texture2D" uid="uid://bm6rqdpjccy47" path="res://Assets/Combat/HealthFrame.png" id="4_8rf2l"]
[ext_resource type="Texture2D" uid="uid://brso7011tsoga" path="res://Assets/Combat/GreenHealth.png" id="5_hphm8"]
[ext_resource type="Script" path="res://Scripts/Combat/CombatPokemon.gd" id="6_cxj0h"]
[ext_resource type="Script" path="res://Scripts/Combat/CombatUI.gd" id="7_anm04"]
[ext_resource type="Script" path="res://Scripts/Combat/MoveButton.gd" id="8_fc6bv"]

[node name="Combat" type="CanvasLayer"]
script = ExtResource("1_bn50e")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(579, 322)
texture = ExtResource("1_74idv")

[node name="Player" type="Node2D" parent="."]
position = Vector2(213, 574)
script = ExtResource("6_cxj0h")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
scale = Vector2(5, 5)

[node name="Healthbar" type="TextureProgressBar" parent="Player"]
offset_left = -209.0
offset_top = 32.0
offset_right = -129.0
offset_bottom = 41.0
scale = Vector2(4, 4)
value = 100.0
texture_under = ExtResource("3_12ert")
texture_over = ExtResource("4_8rf2l")
texture_progress = ExtResource("5_hphm8")

[node name="Label" type="Label" parent="Player/Healthbar"]
layout_mode = 0
offset_left = 1.0
offset_top = -6.0
offset_right = 134.0
offset_bottom = 20.0
scale = Vector2(0.3, 0.3)
text = "Bulbasaur LV 100"

[node name="Enemy" type="Node2D" parent="."]
position = Vector2(740, 423)
script = ExtResource("6_cxj0h")

[node name="Sprite2D" type="Sprite2D" parent="Enemy"]
scale = Vector2(4, 4)

[node name="Healthbar" type="TextureProgressBar" parent="Enemy"]
offset_left = 83.0
offset_top = -397.0
offset_right = 163.0
offset_bottom = -388.0
scale = Vector2(4, 4)
value = 100.0
texture_under = ExtResource("3_12ert")
texture_over = ExtResource("4_8rf2l")
texture_progress = ExtResource("5_hphm8")

[node name="Label" type="Label" parent="Enemy/Healthbar"]
layout_mode = 0
offset_left = 1.0
offset_top = -6.0
offset_right = 134.0
offset_bottom = 20.0
scale = Vector2(0.3, 0.3)
text = "Bulbasaur LV 100"

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = -6.0
offset_right = 40.0
offset_bottom = 34.0
script = ExtResource("7_anm04")

[node name="Menu" type="VBoxContainer" parent="UI"]
layout_mode = 2
offset_left = 850.0
offset_top = 380.0
offset_right = 1003.0
offset_bottom = 516.0
scale = Vector2(2, 2)

[node name="Fight" type="Button" parent="UI/Menu"]
layout_mode = 2
focus_neighbor_left = NodePath("../Flee")
focus_neighbor_bottom = NodePath("../Items")
theme_override_colors/font_color = Color(0.0901961, 0.0901961, 0.0901961, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
text = "Fight"

[node name="Items" type="Button" parent="UI/Menu"]
layout_mode = 2
focus_neighbor_left = NodePath("../Fight")
focus_neighbor_bottom = NodePath("../Pokemon")
theme_override_colors/font_color = Color(0.0901961, 0.0901961, 0.0901961, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
text = "Bag"

[node name="Pokemon" type="Button" parent="UI/Menu"]
layout_mode = 2
focus_neighbor_top = NodePath("../Items")
focus_neighbor_bottom = NodePath("../Flee")
theme_override_colors/font_color = Color(0.0901961, 0.0901961, 0.0901961, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
text = "Pokemon
"

[node name="Flee" type="Button" parent="UI/Menu"]
layout_mode = 2
focus_neighbor_top = NodePath("../Pokemon")
focus_neighbor_bottom = NodePath("../Fight")
theme_override_colors/font_color = Color(0.0901961, 0.0901961, 0.0901961, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
text = "    Run     "

[node name="Fight" type="Control" parent="UI"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Fight" type="VBoxContainer" parent="UI/Fight"]
layout_mode = 2
offset_left = 850.0
offset_top = 380.0
offset_right = 1003.0
offset_bottom = 516.0
scale = Vector2(2, 2)

[node name="Attack1" type="Button" parent="UI/Fight/Fight"]
custom_minimum_size = Vector2(153, 31)
layout_mode = 2
theme_override_colors/font_color = Color(0.0901961, 0.0901961, 0.0901961, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
text = "Tackle
"
script = ExtResource("8_fc6bv")

[node name="Attack2" type="Button" parent="UI/Fight/Fight"]
custom_minimum_size = Vector2(153, 31)
layout_mode = 2
theme_override_colors/font_color = Color(0.0901961, 0.0901961, 0.0901961, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
text = "Vine Whip"
script = ExtResource("8_fc6bv")

[node name="Attack3" type="Button" parent="UI/Fight/Fight"]
custom_minimum_size = Vector2(153, 31)
layout_mode = 2
theme_override_colors/font_color = Color(0.0901961, 0.0901961, 0.0901961, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
text = "Poison Powder
"
script = ExtResource("8_fc6bv")

[node name="Attack4" type="Button" parent="UI/Fight/Fight"]
custom_minimum_size = Vector2(153, 31)
layout_mode = 2
theme_override_colors/font_color = Color(0.0901961, 0.0901961, 0.0901961, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
text = "Razor Leaf"
script = ExtResource("8_fc6bv")

[node name="Back" type="Button" parent="UI/Fight"]
layout_mode = 0
offset_left = 1088.0
offset_top = 313.0
offset_right = 1133.0
offset_bottom = 354.0
scale = Vector2(1.5, 1.5)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
text = "Back"

[connection signal="pressed" from="UI/Menu/Fight" to="UI" method="_on_fight_pressed"]
[connection signal="movePressed" from="UI/Fight/Fight/Attack1" to="." method="_on_move_pressed"]
[connection signal="pressed" from="UI/Fight/Fight/Attack1" to="UI/Fight/Fight/Attack1" method="_on_pressed"]
[connection signal="movePressed" from="UI/Fight/Fight/Attack2" to="." method="_on_move_pressed"]
[connection signal="pressed" from="UI/Fight/Fight/Attack2" to="UI/Fight/Fight/Attack2" method="_on_pressed"]
[connection signal="movePressed" from="UI/Fight/Fight/Attack3" to="." method="_on_move_pressed"]
[connection signal="pressed" from="UI/Fight/Fight/Attack3" to="UI/Fight/Fight/Attack3" method="_on_pressed"]
[connection signal="movePressed" from="UI/Fight/Fight/Attack4" to="." method="_on_move_pressed"]
[connection signal="pressed" from="UI/Fight/Fight/Attack4" to="UI/Fight/Fight/Attack4" method="_on_pressed"]
[connection signal="pressed" from="UI/Fight/Back" to="UI" method="_on_back_pressed"]
